fix: 修复 JDK17 升级编译警告和 Log4j 运行时警告
- 废弃构造函数替换为 valueOf: Byte/Character/Integer/Short/Double

- ExcelBuiltinFormats.getBuiltinFormats() 添加 @Deprecated 注解

- pom: compiler 改用 release；添加 log4j-core test scope

- 添加 log4j2-test.xml 消除 Log4j2 provider 运行时警告